--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @import '~govuk-frontend';
-@import "court-details";
+@import 'court-details';
 
 // sass-lint:disable class-name-format
 .govuk-phase-banner__text {
