--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -56,9 +56,9 @@
 
       {% if results.info %}
         <div class="govuk-grid-row" id="additional-info">
-          <h4 class="govuk-heading-s">
+          <h3 class="govuk-heading-m">
             {{ additionalInfoHeading }}
-          </h4>
+          </h3>
           <p class="govuk-body-m">
             {{ results.info }}
           </p>
