--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -61,10 +61,10 @@
           <a class="govuk-link" href="https://www.gov.uk/guidance/what-to-expect-coming-to-a-court-or-tribunal">{{ visitingExpectationText }}</a>
         </p>
       </div>
-      {% if results.urgent %}
-        <div class="govuk-grid-row" id="urgent-notice">
+      {% if results['urgent_message'] %}
+        <div class="govuk-grid-row" id="urgent-message">
           {{ govukWarningText({
-            text: results.urgent,
+            text: results['urgent_message'],
             iconFallbackText: "Warning"
           }) }}
         </div>
@@ -225,7 +225,7 @@
           {% endif %}
           {% if results['dx_number'] and results['dx_number'].length > 0 %}
             {% for dx in results['dx_number'] %}
-              <p class="govuk-body-m .dx-number">
+              <p class="govuk-body-m dx-number">
                 DX: <span class="govuk-body-m">{{ dx }}</span>
               </p>
             {% endfor %}
