--- a/src/main/views/court-details/in-person-court.njk
+++ b/src/main/views/court-details/in-person-court.njk
@@ -174,7 +174,7 @@
 
     <div class="govuk-grid-column-one-third .side-content">
       <div class="govuk-grid-row">
-        <img src="{{ court.image_file }}" alt="Front view of {{ results.name }}">
+        <img src="{{ results.image_file }}" alt="Front view of {{ results.name }}">
         <p class="govuk-body-s">
           {{ results.name }}
         </p>
