Fix Pa11y errors

--- a/src/main/views/choose-action.njk
+++ b/src/main/views/choose-action.njk
@@ -20,7 +20,7 @@
 
 {% block content %}
 {% if errors %}
-  {{ errorSummary(error.title, error.text, "#choose-action") }}
+  {{ errorSummary(error.title, error.text, "#nearest-court") }}
 {% endif %}
 
 <div class="govuk-grid-row">
