--- a/src/main/views/search/option.njk
+++ b/src/main/views/search/option.njk
@@ -20,7 +20,7 @@
 
 {% block content %}
 {% if errors %}
-  {{ errorSummary(error.title, error.text, "#know-location") }}
+  {{ errorSummary(error.title, error.text, "#i-have-the-name") }}
 {% endif %}
 
 <div class="govuk-grid-row">
