--- a/src/main/views/webpack/css.njk
+++ b/src/main/views/webpack/css.njk
@@ -1,1 +1,1 @@
-<link href="/main.e7f995bd1f83df27e084.css" rel="stylesheet">
+<link href="/<%= htmlWebpackPlugin.files.css[0].substr(htmlWebpackPlugin.files.publicPath.length) %>" rel="stylesheet">
