Add welsh templates

--- a/src/main/views/webpack/css.njk
+++ b/src/main/views/webpack/css.njk
@@ -1,1 +1,1 @@
-<link href="/<%= htmlWebpackPlugin.files.css[0].substr(htmlWebpackPlugin.files.publicPath.length) %>" rel="stylesheet">
+<link href="/main.6274ff69b714e4fe3702.css" rel="stylesheet">
