--- a/src/main/views/court-details/not-in-person-court.njk
+++ b/src/main/views/court-details/not-in-person-court.njk
@@ -127,7 +127,7 @@
 
       <div class="govuk-grid-row">
         <h3 class="govuk-heading-m">
-          {{ usefulLinksHeading }}:
+          {{ complaintHeading }}:
         </h3>
         <p class="govuk-body-m">
           <a class="govuk-link" href="https://www.gov.uk/government/organisations/hm-courts-and-tribunals-service/about/complaints-procedure">{{ complaintText }}</a>
